--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body{
     margin: 15px;
 }
 .postagem1 h2{
-    color: red;
+    color: rgb(121, 6, 6);
 }
 .postagem2 h2{
-    color: red;
+    color: rgb(121, 6, 6);
 }
 .postagem2 {
     border-radius: 10px;
